--- a/src/components/Box/Box.module.scss
+++ b/src/components/Box/Box.module.scss
@@ -1,10 +1,11 @@
 .Box {
+  box-sizing: border-box;
   padding: 16px;
   border-radius: 4px;
   text-align: center;
   color: #efefef;
   font-weight: bold;
-  background-color: #433baa;
+  background-color: #240237;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
   0 2px 2px rgba(0, 0, 0, 0.1),
   0 4px 4px rgba(0, 0, 0, 0.1),
